Adicionar formatacao nas telas do app

--- a/app/src/main/res/layout/activity_list_usu.xml
+++ b/app/src/main/res/layout/activity_list_usu.xml
@@ -3,10 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="RESULTADOS DA PESQUISA:" />
+
     <ListView
         android:id="@+id/listausu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="699dp" />
 
 </RelativeLayout>
