--- a/app/src/main/res/layout/activity_add_usu.xml
+++ b/app/src/main/res/layout/activity_add_usu.xml
@@ -6,9 +6,14 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="93dp"
+        android:background="#2196F3" />
+
     <Space
         android:layout_width="match_parent"
-        android:layout_height="139dp" />
+        android:layout_height="28dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,7 +22,7 @@
 
     <EditText
         android:id = "@+id/login"
-        android:layout_width = "match_parent"
+        android:layout_width="200dp"
         android:layout_height = "wrap_content"
         android:inputType = "text" />
     <TextView
@@ -26,7 +31,7 @@
         android:text="@string/lbsenha"/>
     <EditText
         android:id = "@+id/senha"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "textPassword" />
     <TextView
@@ -35,7 +40,7 @@
         android:text="@string/lbstatus"/>
     <EditText
         android:id = "@+id/status"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "text" />
     <TextView
@@ -44,14 +49,30 @@
         android:text="@string/lbtipo"/>
     <EditText
         android:id = "@+id/tipo"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "text" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="11dp" />
+
     <Button
-        android:id = "@+id/btinserir"
-        android:layout_width = "match_parent"
-        android:layout_height = "wrap_content"
-        android:text = "@string/btinserir" />
+        android:id="@+id/btinserir"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="#3F51B5"
+        android:textColor="#FFFFFF"
+        android:text="@string/btinserir" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="28dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="267dp"
+        android:background="#00BCD4" />
 
 </LinearLayout>
 
