--- a/app/src/main/res/layout/activity_list_usu_param.xml
+++ b/app/src/main/res/layout/activity_list_usu_param.xml
@@ -6,24 +6,53 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="28dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lblogin"/>
+
     <EditText
         android:id = "@+id/login"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "text" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="14dp" />
+
     <Button
         android:id = "@+id/btpesquisar"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
+        android:background="#3F51B5"
+        android:textColor="#FFFFFF"
         android:text = "@string/btpesquisar" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="28dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="RESULTADOS DA PESQUISA:" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="14dp" />
+
     <ListView
         android:id="@+id/listausu"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:foregroundGravity="center"></ListView>
 
 </LinearLayout>
