--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,9 +6,14 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="102dp"
+        android:background="#2196F3" />
+
     <Space
         android:layout_width="match_parent"
-        android:layout_height="192dp" />
+        android:layout_height="31dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -29,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lbsenha"/>
+
     <EditText
         android:id = "@+id/senha"
         android:layout_width = "200dp"
@@ -43,12 +49,29 @@
         android:id="@+id/btentrar"
         android:layout_width="500px"
         android:layout_height="wrap_content"
+        android:background="#000000"
+        android:textColor="#FFFFFF"
         android:text="@string/btentrar" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="11dp" />
 
     <Button
         android:id="@+id/btnovousu"
         android:layout_width="500px"
         android:layout_height="wrap_content"
+        android:background="#3F51B5"
+        android:textColor="#FFFFFF"
         android:text="NOVO ALUNO" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="43dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="278dp"
+        android:background="#00BCD4" />
 
 </LinearLayout>
