--- a/app/src/main/res/layout/activity_upt_usu.xml
+++ b/app/src/main/res/layout/activity_upt_usu.xml
@@ -6,9 +6,14 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:background="#2196F3" />
+
     <Space
         android:layout_width="match_parent"
-        android:layout_height="146dp" />
+        android:layout_height="15dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -17,45 +22,69 @@
 
     <EditText
         android:id = "@+id/login"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "text" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lbsenha"/>
+
     <EditText
         android:id = "@+id/senha"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "textPassword" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lbstatus"/>
+
     <EditText
         android:id = "@+id/status"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "text" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lbtipo"/>
+
     <EditText
         android:id = "@+id/tipo"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
         android:inputType = "text" />
     <Button
         android:id = "@+id/btalterar"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
+        android:background="#3F51B5"
+        android:textColor="#FFFFFF"
         android:text = "@string/btalterar" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="16dp" />
+
     <Button
         android:id = "@+id/btexcluir"
-        android:layout_width = "match_parent"
+        android:layout_width = "200dp"
         android:layout_height = "wrap_content"
+        android:background="#3F51B5"
+        android:textColor="#FFFFFF"
         android:text = "@string/btexcluir" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="16dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00BCD4" />
 
 </LinearLayout>
