--- a/app/src/main/res/layout/activity_pre_menu.xml
+++ b/app/src/main/res/layout/activity_pre_menu.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="164dp"
+        android:layout_height="209dp"
         android:background="#2196F3" />
 
     <Space
@@ -16,50 +16,38 @@
         android:layout_height="26dp" />
 
     <Button
-        android:id="@+id/btlistusu"
+        android:id="@+id/btareaalunos"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="#3F51B5"
         android:textColor="#FFFFFF"
-        android:text="LISTAR ALUNOS" />
+        android:text="@string/btareaalunos" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="24dp" />
 
     <Button
-        android:id="@+id/btlistusuParam"
+        android:id="@+id/btareadisciplinas"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="#3F51B5"
         android:textColor="#FFFFFF"
-        android:text="PESQUISAR ALUNO" />
+        android:text="@string/areadisciplinas" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="24dp" />
 
-    <Button
-        android:id = "@+id/btnovousu"
-        android:layout_width = "200dp"
-        android:layout_height = "wrap_content"
-        android:background="#3F51B5"
-        android:textColor="#FFFFFF"
-        android:text = "NOVO ALUNO" />
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="24dp" />
-
-    <!--<TextView
+    <TextView
         android:id="@+id/lbUsuLogado"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:text="@string/lbusuariologado" />-->
+        android:layout_height="2dp"
+        android:text="@string/lbusuariologado" />
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="326dp"
+        android:layout_height="346dp"
         android:background="#00BCD4" />
 
 </LinearLayout>
