--- a/app/src/main/res/layout/activity_alu_menu.xml
+++ b/app/src/main/res/layout/activity_alu_menu.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="164dp"
-        android:background="#2196F3" />
+        android:background="#416D42" />
 
     <Space
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         android:id="@+id/btlistusu"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#3F51B5"
+        android:background="#027E72"
         android:textColor="#FFFFFF"
         android:text="LISTAR ALUNOS" />
 
@@ -31,7 +31,7 @@
         android:id="@+id/btlistusuParam"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#3F51B5"
+        android:background="#027E72"
         android:textColor="#FFFFFF"
         android:text="PESQUISAR ALUNO" />
 
@@ -43,7 +43,7 @@
         android:id = "@+id/btnovousu"
         android:layout_width = "200dp"
         android:layout_height = "wrap_content"
-        android:background="#3F51B5"
+        android:background="#027E72"
         android:textColor="#FFFFFF"
         android:text = "NOVO ALUNO" />
 
@@ -60,6 +60,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="326dp"
-        android:background="#00BCD4" />
+        android:background="#4CAF50" />
 
 </LinearLayout>
