--- a/app/src/main/res/layout/activity_dis_menu.xml
+++ b/app/src/main/res/layout/activity_dis_menu.xml
@@ -9,57 +9,51 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="175dp"
-        android:background="#3C3A3A" />
+        android:background="#5F0904" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="26dp" />
 
     <Button
-        android:id="@+id/btareaalunos"
+        android:id="@+id/btlistdis"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#000000"
+        android:background="#A0140A"
         android:textColor="#FFFFFF"
-        android:text="@string/btareaalunos" />
+        android:text="@string/btlistdis" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="24dp" />
 
     <Button
-        android:id="@+id/btareadisciplinas"
+        android:id="@+id/btlistdisParam"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#000000"
+        android:background="#A0140A"
         android:textColor="#FFFFFF"
-        android:text="@string/btareadisciplinas" />
+        android:text="@string/btlistdisParam" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="24dp" />
 
     <Button
-        android:id="@+id/btareanotas"
+        android:id="@+id/btnovadis"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:background="#000000"
+        android:background="#A0140A"
         android:textColor="#FFFFFF"
-        android:text="@string/btareanotas" />
+        android:text="@string/btnovadis" />
 
     <Space
         android:layout_width="match_parent"
         android:layout_height="24dp" />
-
-    <!--<TextView
-        android:id="@+id/lbUsuLogado"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:text="@string/lbusuariologado" />-->
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="314dp"
-        android:background="#686666" />
+        android:background="#FF1000" />
 
 </LinearLayout>
