--- a/app/src/main/res/layout/activity_list_usu.xml
+++ b/app/src/main/res/layout/activity_list_usu.xml
@@ -6,7 +6,7 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:gravity="center"
         android:text="RESULTADOS DA PESQUISA:" />
 
