--- a/app/src/main/res/layout/activity_list_usu_param.xml
+++ b/app/src/main/res/layout/activity_list_usu_param.xml
@@ -29,7 +29,7 @@
         android:id = "@+id/btpesquisar"
         android:layout_width = "200dp"
         android:layout_height = "wrap_content"
-        android:background="#3F51B5"
+        android:background="#027E72"
         android:textColor="#FFFFFF"
         android:text = "@string/btpesquisar" />
 
