--- a/app/src/main/res/layout/activity_upt_usu.xml
+++ b/app/src/main/res/layout/activity_upt_usu.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:background="#2196F3" />
+        android:background="#416D42" />
 
     <Space
         android:layout_width="match_parent"
@@ -62,7 +62,7 @@
         android:id = "@+id/btalterar"
         android:layout_width = "200dp"
         android:layout_height = "wrap_content"
-        android:background="#3F51B5"
+        android:background="#027E72"
         android:textColor="#FFFFFF"
         android:text = "@string/btalterar" />
 
@@ -74,7 +74,7 @@
         android:id = "@+id/btexcluir"
         android:layout_width = "200dp"
         android:layout_height = "wrap_content"
-        android:background="#3F51B5"
+        android:background="#027E72"
         android:textColor="#FFFFFF"
         android:text = "@string/btexcluir" />
 
@@ -85,6 +85,6 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00BCD4" />
+        android:background="#4CAF50" />
 
 </LinearLayout>
