--- a/app/src/main/res/layout/activity_list_dis_param.xml
+++ b/app/src/main/res/layout/activity_list_dis_param.xml
@@ -1,6 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="28dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbprof"/>
+
+    <EditText
+        android:id = "@+id/prof"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="14dp" />
+
+    <Button
+        android:id = "@+id/btpesquisardis"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:background="#A0140A"
+        android:textColor="#FFFFFF"
+        android:text = "@string/btpesquisardis" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="28dp" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="RESULTADOS DA PESQUISA:" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="14dp" />
+
+    <ListView
+        android:id="@+id/listadis"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:foregroundGravity="center"></ListView>
+
+</LinearLayout>
