--- a/app/src/main/res/layout/activity_upt_dis.xml
+++ b/app/src/main/res/layout/activity_upt_dis.xml
@@ -1,6 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:background="#5F0904" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="15dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbnomedis" />
+
+    <EditText
+        android:id = "@+id/nomedis"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbprof"/>
+
+    <EditText
+        android:id = "@+id/prof"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbcurso"/>
+
+    <EditText
+        android:id = "@+id/curso"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbperiodo"/>
+
+    <EditText
+        android:id = "@+id/periodo"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+    <Button
+        android:id = "@+id/btalterardis"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:background="#A0140A"
+        android:textColor="#FFFFFF"
+        android:text = "@string/btalterardis" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="16dp" />
+
+    <Button
+        android:id = "@+id/btexcluirdis"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:background="#A0140A"
+        android:textColor="#FFFFFF"
+        android:text = "@string/btexcluirdis" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="16dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#FF1000" />
+
+</LinearLayout>
