acrescentar tabela nota

--- a/app/src/main/res/layout/activity_list_nota.xml
+++ b/app/src/main/res/layout/activity_list_nota.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:gravity="center"
+        android:text="RESULTADOS DA PESQUISA DE NOTAS:" />
+
+    <ListView
+        android:id="@+id/listanota"
+        android:layout_width="match_parent"
+        android:layout_height="699dp" />
+
+</RelativeLayout>
