--- a/app/src/main/res/layout/activity_add_nota.xml
+++ b/app/src/main/res/layout/activity_add_nota.xml
@@ -1,6 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="93dp"
+        android:background="#2196F3" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="28dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbnomealuno" />
+
+    <EditText
+        android:id = "@+id/nomealuno"
+        android:layout_width="200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbp1"/>
+
+    <EditText
+        android:id = "@+id/p1"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbp2"/>
+
+    <EditText
+        android:id = "@+id/p2"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/lbsitfinal"/>
+
+    <EditText
+        android:id = "@+id/sitfinal"
+        android:layout_width = "200dp"
+        android:layout_height = "wrap_content"
+        android:inputType = "text" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="11dp" />
+
+    <Button
+        android:id="@+id/btinserirnota"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="#3F51B5"
+        android:textColor="#FFFFFF"
+        android:text="@string/btinserirnota" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="28dp" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="267dp"
+        android:background="#00BCD4" />
+
+</LinearLayout>
