--- a/app/src/main/res/layout/activity_list_alu.xml
+++ b/app/src/main/res/layout/activity_list_alu.xml
@@ -11,7 +11,7 @@
         android:text="RESULTADOS DA PESQUISA DE ALUNOS:" />
 
     <ListView
-        android:id="@+id/listausu"
+        android:id="@+id/listaalu"
         android:layout_width="match_parent"
         android:layout_height="699dp" />
 
