--- a/app/src/main/res/layout/activity_upt_dis.xml
+++ b/app/src/main/res/layout/activity_upt_dis.xml
@@ -40,7 +40,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/lbcurso"/>
+        android:text="@string/lbcursodis"/>
 
     <EditText
         android:id = "@+id/curso"
