--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,6 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20dp"
         android:text="@string/lblogin" />
 
     <EditText
@@ -33,13 +34,14 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20dp"
         android:text="@string/lbsenha"/>
 
     <EditText
-        android:id = "@+id/senha"
-        android:layout_width = "200dp"
-        android:layout_height = "wrap_content"
-        android:inputType = "textPassword" />
+        android:id ="@+id/senha"
+        android:layout_width ="200dp"
+        android:layout_height ="wrap_content"
+        android:inputType ="textPassword" />
 
     <Space
         android:layout_width="match_parent"
@@ -47,9 +49,10 @@
 
     <Button
         android:id="@+id/btentrar"
-        android:layout_width="500px"
+        android:layout_width="570px"
         android:layout_height="wrap_content"
-        android:background="#000000"
+        android:background="@drawable/custom_btn_entrar"
+        android:textSize="20dp"
         android:textColor="#FFFFFF"
         android:text="@string/btentrar" />
 
