--- a/app/src/main/res/layout/activity_nota_menu.xml
+++ b/app/src/main/res/layout/activity_nota_menu.xml
@@ -17,10 +17,11 @@
 
     <Button
         android:id="@+id/btlistnota"
-        android:layout_width="200dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:background="#3F51B5"
+        android:background="@drawable/custom_nota_btns"
         android:textColor="#FFFFFF"
+        android:textSize="20dp"
         android:text="@string/btlistnota" />
 
     <Space
@@ -29,10 +30,11 @@
 
     <Button
         android:id="@+id/btlistnotaParam"
-        android:layout_width="200dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:background="#3F51B5"
+        android:background="@drawable/custom_nota_btns"
         android:textColor="#FFFFFF"
+        android:textSize="20dp"
         android:text="@string/btlistnotaParam" />
 
     <Space
@@ -41,10 +43,11 @@
 
     <Button
         android:id="@+id/btnovanota"
-        android:layout_width="200dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:background="#3F51B5"
+        android:background="@drawable/custom_nota_btns"
         android:textColor="#FFFFFF"
+        android:textSize="20dp"
         android:text="@string/btnovanota" />
 
     <Space
