--- a/app/src/main/res/layout/activity_pre_menu.xml
+++ b/app/src/main/res/layout/activity_pre_menu.xml
@@ -17,10 +17,11 @@
 
     <Button
         android:id="@+id/btareaalunos"
-        android:layout_width="200dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:background="#000000"
-        android:textColor="#FFFFFF"
+        android:background="@drawable/custom_btn_pre_menu"
+        android:textColor="#000000"
+        android:textSize="20dp"
         android:text="@string/btareaalunos" />
 
     <Space
@@ -29,10 +30,11 @@
 
     <Button
         android:id="@+id/btareadisciplinas"
-        android:layout_width="200dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:background="#000000"
-        android:textColor="#FFFFFF"
+        android:background="@drawable/custom_btn_pre_menu"
+        android:textColor="#000000"
+        android:textSize="20dp"
         android:text="@string/btareadisciplinas" />
 
     <Space
@@ -41,10 +43,11 @@
 
     <Button
         android:id="@+id/btareanotas"
-        android:layout_width="200dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:background="#000000"
-        android:textColor="#FFFFFF"
+        android:background="@drawable/custom_btn_pre_menu"
+        android:textColor="#000000"
+        android:textSize="20dp"
         android:text="@string/btareanotas" />
 
     <Space
