--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#2F2F31</color>
     <color name="colorPrimaryDark">#030303</color>
-    <color name="colorAccent">#03A9F4</color>
+    <color name="colorAccent">#030303</color>
 </resources>
